Initial commit: some view updates.

--- a/src/main/webapp/view/templates/footer.xhtml
+++ b/src/main/webapp/view/templates/footer.xhtml
@@ -9,9 +9,11 @@
 
 <ui:component>
     <div class="container-fluid bg-panda">
-        <div class="text-white p-2 text-center">
-            &copy; CopyRight Sanity Web Design Studios 2019. All rights reserved.
-        </div>
+        <footer class="bg-panda">
+            <div class="text-white p-2 text-center">
+                &copy; CopyRight Sanity Web Design Studios 2019. All rights reserved.
+            </div>
+        </footer>
     </div>
 </ui:component>
 
