--- a/src/main/webapp/view/login.xhtml
+++ b/src/main/webapp/view/login.xhtml
@@ -1,23 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  Created by IntelliJ IDEA.
-  User: Stefan
-  Date: 09-Aug-19
-  Time: 8:19 PM
--->
 <!DOCTYPE html
         PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
 
-<h:head>
-    <title>Title</title>
-</h:head>
-
-<h:body>
-    
-</h:body>
+<ui:composition template="templates/base-layout.xhtml">
+    <ui:define name="main-content">
+        <div class="mt-3">
+            <h1 class="text-center text-torshia">Login</h1>
+            <hr class="bg-panda w-50 hr-2"/>
+            <h:form class="mx-auto w-50" method="post" action="login">
+                <div class="form-group">
+                    <h:outputLabel for="username" class="text-torshia" value="Username"/>
+                    <h:inputText value="" class="form-control" id="username" a:placeholder="Username..." name="username"/>
+                </div>
+                <div class="form-group">
+                    <h:outputLabel for="password" class="text-torshia" value="Password"/>
+                    <h:inputText value="" class="form-control" id="password" a:placeholder="Password..." name="password"/>
+                </div>
+                <div class="button-holder d-flex justify-content-center">
+                    <h:commandButton type="submit" class="btn bg-panda text-white" value="Login"/>
+                </div>
+            </h:form>
+        </div>
+    </ui:define>
+</ui:composition>
 
 </html>
