--- a/src/main/webapp/view/login.xhtml
+++ b/src/main/webapp/view/login.xhtml
@@ -16,11 +16,11 @@
             <h:form class="mx-auto w-50" method="post" action="login">
                 <div class="form-group">
                     <h:outputLabel for="username" class="text-torshia" value="Username"/>
-                    <h:inputText value="" class="form-control" id="username" a:placeholder="Username..." name="username"/>
+                    <h:inputText value="" class="form-control" id="username" a:placeholder="Username..." name="username" required="true"/>
                 </div>
                 <div class="form-group">
                     <h:outputLabel for="password" class="text-torshia" value="Password"/>
-                    <h:inputText value="" class="form-control" id="password" a:placeholder="Password..." name="password"/>
+                    <h:inputText value="" class="form-control" id="password" a:placeholder="Password..." name="password" required="true"/>
                 </div>
                 <div class="button-holder d-flex justify-content-center">
                     <h:commandButton type="submit" class="btn bg-panda text-white" value="Login"/>
