--- a/src/main/webapp/view/register.xhtml
+++ b/src/main/webapp/view/register.xhtml
@@ -4,9 +4,10 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:o="http://omnifaces.org/ui"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough" xmlns:f="http://xmlns.jcp.org/jsf/core">
 
 <ui:composition template="templates/base-layout.xhtml">
     <ui:define name="main-content">
@@ -16,26 +17,40 @@
             <h:form class="mx-auto w-50" method="post" action="/register">
                 <div class="form-group">
                     <h:outputLabel for="username" class="text-torshia" value="Username"/>
-                    <h:inputText value="" type="text" class="form-control" id="username"
-                                 a:placeholder="Username..." name="username"/>
+                    <h:inputText value="#{register.userRegister.username}" type="text" class="form-control" id="username" a:placeholder="Username..."
+                                 name="username" required="true" label="Username" validatorMessage="Username must be 5 chars...">
+                        <f:validateLength minimum="5"/>
+                    </h:inputText>
+                    <h:message for="username"/>
                 </div>
                 <div class="form-group">
-                    <label for="password" class="text-torshia">Password</label>
-                    <h:inputText value="" type="password" class="form-control" id="password"
-                                 a:placeholder="Password..." name="password"/>
+                    <h:outputLabel for="password" class="text-torshia" value="Password"/>
+                    <h:inputSecret value="#{register.userRegister.password}" type="password" class="form-control"
+                                   id="password" a:placeholder="Password..." name="password" required="true"
+                                   label="Password" validatorMessage="Password must be 5 chars...">
+                        <f:validateLength minimum="5"/>
+                    </h:inputSecret>
+                    <h:message for="password"/>
                 </div>
                 <div class="form-group">
-                    <label for="confirmPassword" class="text-torshia">Confirm Password</label>
-                    <h:inputText value="" type="password" class="form-control" id="confirmPassword"
-                                 a:placeholder="Confirm Password..." name="confirmPassword"/>
+                    <h:outputLabel for="password2" class="text-torshia" value="Confirm Password"/>
+                    <h:inputSecret value="#{register.userRegister.confirmPassword}" type="password"
+                                   class="form-control" id="password2" name="confirmPassword"
+                                   a:placeholder="Confirm Password..." required="true" label="Confirm Password"/>
+                    <h:message for="password2"/>
+                    <o:validateEqual components="password password2" message="Passwords do not match!" showMessageFor="password2"/>
                 </div>
                 <div class="form-group">
-                    <label for="email" class="text-torshia">Email</label>
-                    <h:inputText value="" type="email" class="form-control" id="email"
-                                 a:placeholder="Email..." name="email"/>
+                    <h:outputLabel for="email" class="text-torshia" value="Email"/>
+                    <h:inputText value="#{register.userRegister.email}" type="email" class="form-control" id="email"
+                                 a:placeholder="Email..." name="email" required="true" label="Email"
+                                 validatorMessage="Incorect email...">
+                            <f:validateRegex pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$"/>
+                    </h:inputText>
+                    <h:message for="email"/>
                 </div>
                 <div class="button-holder mt-4 d-flex justify-content-center">
-                    <h:commandButton type="submit" class="btn bg-panda text-white" value="Register"/>
+                    <h:commandButton action="#{register.submitUser}" type="submit" class="btn bg-panda text-white" value="Register"/>
                 </div>
             </h:form>
         </div>
