Initial commit: minor bug fixed. Adding additional filters. Some user and admin functionality.

--- a/src/main/webapp/view/index.xhtml
+++ b/src/main/webapp/view/index.xhtml
@@ -13,8 +13,8 @@
         <div class="jumbotron mt-3 bg-panda">
             <h1 class="text-white">Welcome to PANDA Delivery Services.</h1>
             <hr class="bg-white hr-2"/>
-            <h3 class="text-white"><h:link outcome="login">Login</h:link> if you have an account.</h3>
-            <h3 class="text-white"><h:link outcome="register">Register</h:link> if you don't.</h3>
+            <h3 class="text-white"><h:link outcome="login" value="Login" /> if you have an account.</h3>
+            <h3 class="text-white"><h:link outcome="register" value="Register" /> if you don't.</h3>
         </div>
         </h:form>
     </ui:define>
