--- a/src/main/webapp/view/login.xhtml
+++ b/src/main/webapp/view/login.xhtml
@@ -23,7 +23,7 @@
                     <h:inputSecret value="#{login.user.password}" class="form-control" id="password" a:placeholder="Password..." name="password" required="true"/>
                 </div>
                 <div class="button-holder d-flex justify-content-center">
-                    <h:commandButton action="#{login.loginUser}" type="submit" class="btn bg-panda text-white" value="Login"/>
+                    <h:commandButton action="#{login.login}" type="submit" class="btn bg-panda text-white" value="Login"/>
                 </div>
             </h:form>
         </div>
