--- a/src/main/webapp/view/register.xhtml
+++ b/src/main/webapp/view/register.xhtml
@@ -7,7 +7,8 @@
       xmlns:o="http://omnifaces.org/ui"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:a="http://xmlns.jcp.org/jsf/passthrough" xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
 <ui:composition template="templates/base-layout.xhtml">
     <ui:define name="main-content">
