--- a/src/main/webapp/view/templates/navbar.xhtml
+++ b/src/main/webapp/view/templates/navbar.xhtml
@@ -5,31 +5,73 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
 
 <ui:component>
-    <h:form class="navbar navbar-expand-lg navbar-dark bg-panda">
-        <h:link class="navbar-brand nav-link-white" outcome="index" value="PANDA"/>
-        <h:button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"/>
-        </h:button>
+    <div class="navbar navbar-expand-lg navbar-dark bg-panda">
+        <h:link class="navbar-brand nav-link-white" value="PANDA" outcome="index"/>
         <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
             <ul class="navbar-nav">
+                <c:choose>
+                    <c:when test="#{session.getAttribute('role') == 'Admin'}">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <h:link class="nav-link nav-link-white active"
+                                        outcome="#{pageContext.request.contextPath}/view/admin/pending.xhtml"
+                                        value="Pending" />
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link nav-link-white active" href="/shipped">Shipped</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link nav-link-white active" href="/delivered">Delivered</a>
+                            </li>
+                            <li class="nav-item">
+                                <h:link class="nav-link nav-link-white active"
+                                        outcome="#{pageContext.request.contextPath}/view/admin/create-package.xhtml"
+                                        value="Package"/>
+                            </li>
+                        </ul>
+                    </c:when>
+                </c:choose>
             </ul>
             <ul class="navbar-nav">
-                <h:form class="nav-item">
-                    <h:link class="nav-link nav-link-white active" outcome="index" value="Home"/>
-                </h:form>
-                <h:form class="nav-item">
-                    <h:link class="nav-link nav-link-white active" outcome="login" value="Login"/>
-                </h:form>
-                <h:form class="nav-item">
-                    <h:link class="nav-link nav-link-white active" outcome="register" value="Register"/>
-                </h:form>
+                <li class="nav-item">
+                    <c:choose>
+                        <c:when test="#{session.getAttribute('username') != null}">
+                            <h:link class="nav-link nav-link-white active" value="Home" outcome="home"/>
+                        </c:when>
+                        <c:otherwise>
+                            <h:link class="nav-link nav-link-white active" value="Home" outcome="index"/>
+                        </c:otherwise>
+                    </c:choose>
+
+                </li>
+                <c:choose>
+                    <c:when test="#{session.getAttribute('username') == null}">
+                        <li class="nav-item">
+                            <h:link class="nav-link nav-link-white active" value="Login" outcome="login"/>
+                        </li>
+                        <li class="nav-item">
+                            <h:link class="nav-link nav-link-white active" value="Register" outcome="register"/>
+                        </li>
+                    </c:when>
+                    <c:otherwise>
+                        <li class="nav-item">
+                            <h:link class="nav-link nav-link-white active" outcome="my-receipts" value="Receipts"/>
+                        </li>
+                        <li class="nav-item">
+                            <h:form>
+                                <h:commandLink class="nav-link nav-link-white active"
+                                               action="#{userLogoutBean.logout}" value="Logout"/>
+                            </h:form>
+                        </li>
+                    </c:otherwise>
+                </c:choose>
             </ul>
         </div>
-    </h:form>
+    </div>
 </ui:component>
 
 </html>
