--- a/src/main/webapp/view/home.xhtml
+++ b/src/main/webapp/view/home.xhtml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
+<html xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:c="http://java.sun.com/jsp/jstl/core">
+
 <ui:composition template="templates/base-layout.xhtml">
     <ui:define name="main-content">
         <div class="mt-3">
@@ -25,7 +25,9 @@
                         <ui:repeat value="#{homeBean.pendingPackages}" var="aPackage">
                             <div class="p-2 d-flex justify-content-around">
                                 <h4 class="w-75">#{aPackage.description}</h4>
-                                <h:link outcome="details" class="btn bg-panda text-white w-25" value="Details"/>
+                                <h:link outcome="package-details" class="btn bg-panda text-white w-25" value="Details">
+                                    <f:param name="id" value="#{aPackage.id}" />
+                                </h:link>
                             </div>
                         </ui:repeat>
                     </div>
@@ -36,7 +38,9 @@
                         <ui:repeat value="#{homeBean.shippedPackages}" var="aPackage">
                             <div class="p-2 d-flex justify-content-around">
                                 <h4 class="w-75">#{aPackage.description}</h4>
-                                <h:link outcome="details" class="btn bg-panda text-white w-25" value="Details"/>
+                                <h:link outcome="package-details" class="btn bg-panda text-white w-25" value="Details">
+                                    <f:param name="id" value="#{aPackage.id}" />
+                                </h:link>
                             </div>
                         </ui:repeat>
                     </div>
@@ -47,7 +51,9 @@
                         <ui:repeat value="#{homeBean.deliveredPackages}" var="aPackage">
                             <div class="p-2 d-flex justify-content-around">
                                 <h4 class="w-75">#{aPackage.description}</h4>
-                                <h:link outcome="details" class="btn bg-panda text-white w-25" value="Details"/>
+                                <h:link outcome="package-details" class="btn bg-panda text-white w-25" value="Details">
+                                    <f:param name="id" value="#{aPackage.id}" />
+                                </h:link>
                             </div>
                         </ui:repeat>
                     </div>
