--- a/src/main/webapp/view/templates/navbar.xhtml
+++ b/src/main/webapp/view/templates/navbar.xhtml
@@ -3,34 +3,42 @@
         PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
+<html xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:c="http://java.sun.com/jsp/jstl/core">
 
 <ui:component>
     <div class="navbar navbar-expand-lg navbar-dark bg-panda">
-        <h:link class="navbar-brand nav-link-white" value="PANDA" outcome="index"/>
+        <c:choose>
+            <c:when test="#{session.getAttribute('role') == null}">
+                <h:link class="navbar-brand nav-link-white" value="PANDA" outcome="index" />
+            </c:when>
+            <c:otherwise>
+                <h:link class="navbar-brand nav-link-white" value="PANDA"
+                        outcome="#{pageContext.request.contextPath}/view/home" />
+            </c:otherwise>
+        </c:choose>
         <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
             <ul class="navbar-nav">
                 <c:choose>
                     <c:when test="#{session.getAttribute('role') == 'Admin'}">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <h:link class="nav-link nav-link-white active"
-                                        outcome="#{pageContext.request.contextPath}/view/admin/pending.xhtml"
-                                        value="Pending" />
+                                <h:link class="nav-link nav-link-white active" value="Pending"
+                                        outcome="#{pageContext.request.contextPath}/view/admin/pending-package.xhtml" />
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-white active" href="/shipped">Shipped</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-white active" href="/delivered">Delivered</a>
+                                <h:link class="nav-link nav-link-white active" value="Shipped"
+                                        outcome="#{pageContext.request.contextPath}/view/admin/shipped-package.xhtml" />
                             </li>
                             <li class="nav-item">
                                 <h:link class="nav-link nav-link-white active"
-                                        outcome="#{pageContext.request.contextPath}/view/admin/create-package.xhtml"
-                                        value="Package"/>
+                                        outcome="#{pageContext.request.contextPath}/view/admin/delivered-package.xhtml"
+                                        value="Delivered" />
+                            </li>
+                            <li class="nav-item">
+                                <h:link class="nav-link nav-link-white active" value="Package"
+                                        outcome="#{pageContext.request.contextPath}/view/admin/create-package.xhtml" />
                             </li>
                         </ul>
                     </c:when>
@@ -40,10 +48,11 @@
                 <li class="nav-item">
                     <c:choose>
                         <c:when test="#{session.getAttribute('username') != null}">
-                            <h:link class="nav-link nav-link-white active" value="Home" outcome="home"/>
+                            <h:link class="nav-link nav-link-white active" value="Home"
+                                    outcome="#{pageContext.request.contextPath}/view/home.xhtml" />
                         </c:when>
                         <c:otherwise>
-                            <h:link class="nav-link nav-link-white active" value="Home" outcome="index"/>
+                            <h:link class="nav-link nav-link-white active" value="Home" outcome="index" />
                         </c:otherwise>
                     </c:choose>
 
@@ -51,20 +60,21 @@
                 <c:choose>
                     <c:when test="#{session.getAttribute('username') == null}">
                         <li class="nav-item">
-                            <h:link class="nav-link nav-link-white active" value="Login" outcome="login"/>
+                            <h:link class="nav-link nav-link-white active" value="Login" outcome="login" />
                         </li>
                         <li class="nav-item">
-                            <h:link class="nav-link nav-link-white active" value="Register" outcome="register"/>
+                            <h:link class="nav-link nav-link-white active" value="Register" outcome="register" />
                         </li>
                     </c:when>
                     <c:otherwise>
                         <li class="nav-item">
-                            <h:link class="nav-link nav-link-white active" outcome="my-receipts" value="Receipts"/>
+                            <h:link class="nav-link nav-link-white active" value="Receipts"
+                                    outcome="#{pageContext.request.contextPath}/view/my-receipts" />
                         </li>
                         <li class="nav-item">
                             <h:form>
                                 <h:commandLink class="nav-link nav-link-white active"
-                                               action="#{userLogoutBean.logout}" value="Logout"/>
+                                               action="#{userLogoutBean.logout}" value="Logout" />
                             </h:form>
                         </li>
                     </c:otherwise>
