--- a/src/main/webapp/view/admin/delivered-package.xhtml
+++ b/src/main/webapp/view/admin/delivered-package.xhtml
@@ -26,18 +26,18 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <c:forEach items="#{deliveredBean.packages}" var="aPackage" varStatus="i">
+                    <c:forEach items="#{deliveredBean.packages}" var="receipt" varStatus="i">
                     <tr class="row">
                         <th scope="row" class="col-lg-1 d-flex justify-content-center"><h5>#{i.index + 1}</h5></th>
-                        <td class="col-lg-4 d-flex justify-content-center"><h5>#{aPackage.description}</h5></td>
-                        <td class="col-lg-1 d-flex justify-content-center"><h5>#{aPackage.weight} KG</h5></td>
-                        <td class="col-lg-3 d-flex justify-content-center"><h5>#{aPackage.shippingAddress}</h5></td>
-                        <td class="col-lg-2 d-flex justify-content-center"><h5>#{aPackage.recipient}</h5></td>
+                        <td class="col-lg-4 d-flex justify-content-center"><h5>#{receipt.description}</h5></td>
+                        <td class="col-lg-1 d-flex justify-content-center"><h5>#{receipt.weight} KG</h5></td>
+                        <td class="col-lg-3 d-flex justify-content-center"><h5>#{receipt.shippingAddress}</h5></td>
+                        <td class="col-lg-2 d-flex justify-content-center"><h5>#{receipt.recipient}</h5></td>
                         <td class="col-lg-1 d-flex justify-content-center">
                             <h:form>
                                 <h:link outcome="#{pageContext.request.contextPath}/view/package-details.xhtml"
                                         class="btn bg-panda text-white" value="Details">
-                                    <f:param name="id" value="#{aPackage.id}" />
+                                    <f:param name="id" value="#{receipt.id}" />
                                 </h:link>
                             </h:form>
                         </td>
