--- a/src/main/webapp/view/admin/shipped-package.xhtml
+++ b/src/main/webapp/view/admin/shipped-package.xhtml
@@ -25,17 +25,17 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <c:forEach items="#{shippedBean.packages}" var="aPackage" varStatus="i">
+                    <c:forEach items="#{shippedBean.packages}" var="receipt" varStatus="i">
                     <tr class="row">
                         <th scope="row" class="col-lg-1 d-flex justify-content-center"><h5>#{i.index + 1}</h5></th>
-                        <td class="col-lg-4 d-flex justify-content-center"><h5>#{aPackage.description}</h5></td>
-                        <td class="col-lg-1 d-flex justify-content-center"><h5>#{aPackage.weight} KG</h5></td>
-                        <td class="col-lg-3 d-flex justify-content-center"><h5>#{aPackage.estimatedDeliveryTime}</h5></td>
-                        <td class="col-lg-2 d-flex justify-content-center"><h5>#{aPackage.recipient}</h5></td>
+                        <td class="col-lg-4 d-flex justify-content-center"><h5>#{receipt.description}</h5></td>
+                        <td class="col-lg-1 d-flex justify-content-center"><h5>#{receipt.weight} KG</h5></td>
+                        <td class="col-lg-3 d-flex justify-content-center"><h5>#{receipt.estimatedDeliveryTime}</h5></td>
+                        <td class="col-lg-2 d-flex justify-content-center"><h5>#{receipt.recipient}</h5></td>
                         <td class="col-lg-1 d-flex justify-content-center">
                             <h:form>
                                 <h:commandButton class="btn bg-panda text-white" value="Deliver"
-                                                 action="#{shippedBean.changeStatus(aPackage.id)}"/>
+                                                 action="#{shippedBean.changeStatus(receipt.id)}"/>
                             </h:form>
                         </td>
                     </tr>
