--- a/src/main/webapp/view/my-receipts.xhtml
+++ b/src/main/webapp/view/my-receipts.xhtml
@@ -1,23 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  Created by IntelliJ IDEA.
-  User: Stefan
-  Date: 12-Aug-19
-  Time: 2:26 PM
--->
 <!DOCTYPE html
         PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html">
+<html xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
 
-<h:head>
-    <title>Title</title>
-</h:head>
-
-<h:body>
-    
-</h:body>
+<ui:composition template="templates/base-layout.xhtml">
+    <ui:define name="main-content">
+        <div class="mt-3">
+            <h1 class="text-center">My Receipts</h1>
+            <hr class="hr-2 bg-panda"/>
+            <div class="d-flex justify-content-between">
+                <table class="table table-hover table-bordered">
+                    <thead>
+                    <tr class="row">
+                        <th scope="col" class="col-lg-5 d-flex justify-content-center"><h3>Id</h3></th>
+                        <th scope="col" class="col-lg-2 d-flex justify-content-center"><h3>Fee</h3></th>
+                        <th scope="col" class="col-lg-2 d-flex justify-content-center"><h3>Issued On</h3></th>
+                        <th scope="col" class="col-lg-2 d-flex justify-content-center"><h3>Recipient</h3></th>
+                        <th scope="col" class="col-lg-1 d-flex justify-content-center"><h3>Actions</h3></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <c:forEach items="#{receiptsBean.receipts}" var="receipt">
+                        <tr class="row">
+                            <th scope="row" class="col-lg-5 d-flex justify-content-center"><h5>#{receipt.id}</h5></th>
+                            <td class="col-lg-2 d-flex justify-content-center"><h5>$#{receipt.fee}</h5></td>
+                            <td class="col-lg-2 d-flex justify-content-center"><h5>#{receipt.issuedOn}</h5></td>
+                            <td class="col-lg-2 d-flex justify-content-center"><h5>#{receipt.recipient}</h5></td>
+                            <td class="col-lg-1 d-flex justify-content-center">
+                                <h:form>
+                                    <h:link outcome="receipt-details" class="btn bg-panda text-white" value="Details">
+                                        <f:param name="id" value="#{receipt.id}"/>
+                                    </h:link>
+                                </h:form>
+                            </td>
+                        </tr>
+                    </c:forEach>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </ui:define>
+</ui:composition>
 
 </html>
